--- a/app/src/main/res/drawable-v21/ic_menu_home.xml
+++ b/app/src/main/res/drawable-v21/ic_menu_home.xml
@@ -6,6 +6,6 @@
     <path
         android:pathData="M0 0h24v24H0z" />
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="@android:color/black"
         android:pathData="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z" />
 </vector>
