--- a/app/src/main/res/drawable-v21/ic_fullscreen.xml
+++ b/app/src/main/res/drawable-v21/ic_fullscreen.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24.0">
 
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="@android:color/black"
         android:pathData="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"/>
 </vector>
