--- a/app/src/main/res/drawable-v21/ic_mute.xml
+++ b/app/src/main/res/drawable-v21/ic_mute.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24.0">
 
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="@android:color/black"
         android:pathData="M7 9v6h4l5 5V4l-5 5H7z"/>
 </vector>
