--- a/app/src/main/res/drawable-v21/ic_previous.xml
+++ b/app/src/main/res/drawable-v21/ic_previous.xml
@@ -5,6 +5,6 @@
     android:viewportHeight="24.0">
 
     <path
-        android:fillColor="#FF000000"
+        android:fillColor="@android:color/black"
         android:pathData="M6 6h2v12H6zm3.5 6l8.5 6V6z"/>
 </vector>
