--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,16 +7,10 @@
 
     <fragment
         android:id="@+id/nav_home"
-        android:name="com.example.ssleepy.ui.home.HomeFragment"
+        android:name="com.example.ssleepy.ui.pager.PagerFragment"
         android:label="@string/menu_home"
-        tools:layout="@layout/fragment_home">
+        tools:layout="@layout/fragment_pager">
     </fragment>
-
-    <fragment
-        android:id="@+id/nav_mouse"
-        android:name="com.example.ssleepy.ui.mouse.MouseFragment"
-        android:label="@string/menu_mouse"
-        tools:layout="@layout/fragment_mouse" />
 
     <fragment
         android:id="@+id/nav_settings"
